# react-native-ui-lib

./: package.json  tsconfig.build.json
harmony/: ui_lib.har
harmony/ui_lib/: BuildProfile.ets  index.ets  oh-package.json5  ts.ts
harmony/ui_lib/src/main/: module.json5
harmony/ui_lib/src/main/cpp/: CMakeLists.txt  KeyboardTrackingViewTempComponentInstance.h  UiLibPackage.cpp  UiLibPackage.h
harmony/ui_lib/src/main/ets/: CustomInputControllerTempTurboModule.ts  Highlighter.ets  HightlighterView.ets  KeyboardTrackingViewTemp.ets  KeyboardTrackingViewTempManagerTurboModule.ts  KeyboardTrackingViewTempTurboModule.ts  UiLibPackage.ts
harmony/ui_lib/src/main/ets/pages/: Index.ets
harmony/ui_lib/src/main/resources/en_US/element/: string.json
harmony/ui_lib/src/main/resources/zh_CN/element/: string.json
harmony/ui_lib/src/ohosTest/: module.json5
scripts/: build.js
src/: index.ts
src/commons/: Constants.ts
src/components/dateTimePicker/: index.tsx  useOldApi.ts
src/components/segmentedControl/: index.tsx
src/components/slider/: index.tsx
src/incubator/Dialog/: index.tsx
src/native/v1/: CustomInputControllerTempNativeModule.ts  KeyboardTrackingViewTempManagerNativeModule.ts  NativeHighlighterView.ts  NativeKeyboardTrackingViewTemp.ts
src/native/v2/: NativeKeyboardTrackingViewTemp.ts
